d3.js replaced with jqplot in memory.html https://bugs.eclipse.org/bugs/show_bug.cgi?id=468652

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -9,18 +9,47 @@
 
   <title>Dirigible Registry</title>
 
-  <!-- build:css styles/vendor/bootstrap.css -->
+  <!-- styles/vendor/bootstrap.css -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <!-- endbuild -->
-  <!-- build:css styles/app.css -->
+  <!-- end -->
+  <!-- styles/app.css -->
   <link href="styles/custom.css" rel="stylesheet">
   <link href="styles/main.css" rel="stylesheet">
-  <!-- endbuild -->
+  <!-- end -->
 
   <!-- D3 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <!-- D3 -->
 
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+
+  <!-- scripts/jquery.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <!-- end -->
+
+  <!-- scripts/angular.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-resource.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-sanitize.min.js"></script>
+  <script src="components/angular-file-upload/angular-file-upload.min.js"></script>
+  <!-- end -->
+
+  <!-- scripts/app.js -->
+  <script src="scripts/app.js"></script>
+  <script src="templates/default.js"></script>
+  <!-- end -->
+  
+  <!-- jqplot -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/jquery.jqplot.min.css" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/jquery.jqplot.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/plugins/jqplot.cursor.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/plugins/jqplot.dateAxisRenderer.min.js"></script>
+  <!-- end -->
+  
 </head>
 
 <body>
@@ -75,26 +104,6 @@
       </p>
     </div>
   </div>
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-
-  <!-- build:js scripts/jquery.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <!-- endbuild -->
-
-  <!-- build:js scripts/angular.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-resource.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-route.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-sanitize.min.js"></script>
-  <script src="components/angular-file-upload/angular-file-upload.min.js"></script>
-  <!-- endbuild -->
-
-  <!-- build:js scripts/app.js -->
-  <script src="scripts/app.js"></script>
-  <script src="templates/default.js"></script>
-  <!-- endbuild -->
+  
 </body>
 </html>
