the anonymous 'login' page https://bugs.eclipse.org/bugs/show_bug.cgi?id=474551

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/authentication/error.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/authentication/error.html
@@ -14,7 +14,7 @@
 					</div>
 					
 					<div class="account-wall">
-						<img class="logo-img" src="images/dirigible_logo.svg"
+						<img class="logo-img" src="../images/dirigible_logo.svg"
 							alt="">
 						<form class="form-signin" name="loginForm" method="POST" action="j_security_check">
 						<input type="text" name="j_username" class="form-control" placeholder="Username" required autofocus>
