--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/authentication/login.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/authentication/login.html
@@ -9,9 +9,9 @@
         <div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-md-4 col-md-offset-4">
-					<h1 class="text-center login-title">Log in to continue to Dirigible</h1>
+					<h1 class="text-center login-title">Log in to Dirigible</h1>
 					<div class="account-wall">
-						<img class="logo-img" src="images/dirigible_logo.svg"
+						<img class="logo-img" src="../images/dirigible_logo.svg"
 							alt="">
 						<form class="form-signin" name="loginForm" method="POST" action="j_security_check">
 						<input type="text" name="j_username" class="form-control" placeholder="Username" required autofocus>
