--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/index.html
@@ -1,4 +1,4 @@
 <html><head><script>
 var url = window.location.toString();
-window.location='services/ui/index.html' + ((url.indexOf("?") !== -1) ? url.substring(url.indexOf("?")) : '');
+window.location='services/ui/anonymous.html' + ((url.indexOf("?") !== -1) ? url.substring(url.indexOf("?")) : '');
 </script></head></html>
