--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
@@ -69,6 +69,9 @@ function createEditor(content, contentType, readOnlyStatus, breakpointsEnabledSt
                 if(getBreakpointsEnabled()) {
 	                editor.setCaretOffset(editor.getLineStart(0));
                 }
+                
+                // explicitly set the read only mode for empty files
+                editor.getTextView()._readonly = false;
             });
     });
 }
@@ -82,7 +85,7 @@ function setText(text, mode, readOnlyStatus, breakpointsEnabledStatus, row) {
 }
 
 function setReadOnly(status) {
-    editor.setReadOnly(status);
+	editor.getTextView()._readonly = status;
 }
 
 function getBreakpointsEnabled() {
