Fixed copyright at Registry

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -94,7 +94,7 @@
   <div id="footer">
     <div class="container">
       <p class="text-muted credit">
-        Copyright &copy; 2010-2015 SAP, Licensed under the
+        Copyright &copy; 2010-2015 Eclipse Foundation, Licensed under the
         <a href='https://www.eclipse.org/legal/epl-v10.html' target='_blank'>Eclipse Public License - v 1.0</a>
       </p>
     </div>
