styling and stubs for get started pages

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/welcome.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/welcome.html
@@ -1,3 +1,17 @@
+<html>
+<head>
+  <style type="text/css">
+	body{
+		font-family: Verdana, 'Lucida Sans', Arial, Helvetica, sans-serif;
+    	font-size: 12px;
+    	font-weight: normal;
+    	font-style: normal;
+    	color: rgb(74, 74, 74);
+    	padding: 10px;
+	}
+  </style>
+</head>
+<body>
 The Get Started Project will contain the main artefacts needed to run an end to end service.<br>
 It will include:<br>
 <ul>
@@ -8,5 +22,7 @@ It will include:<br>
 <br>
 More advanced technics such as creation of Flows and Jobs, Wiki pages, Extensions and Tests
 can be found at 
-<a href='http://help.dirigible.io'>http://help.dirigible.io</a> and 
-<a href='http://samples.dirigible.io'>http://samples.dirigible.io</a>
+<a target='_blank' href='http://help.dirigible.io'>http://help.dirigible.io</a> and 
+<a target='_blank' href='http://samples.dirigible.io'>http://samples.dirigible.io</a>
+</body>
+</html>
