--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/jsservice.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/jsservice.html
@@ -12,6 +12,33 @@
   </style>
 </head>
 <body>
-JavaScript Service...
+<p>Next step is to create a RESTful service to expose the entity management operations.
+In this example we will use server-side JavaScript.</p>
+<p>There will be three artifacts generated:
+<ol>
+  <li>a DAO service library, which exports all the needed functions to make get, list, update, delete, count, metadata, etc.</li>
+  <li>a wrapper service, which uses the DAO library and exposes remotely accessible end-point</li>
+  <li>an *.entity file - JSON formated design time utility artifact</li>
+</ol>
+
+<p>These artifacts will be created under the <b>ScriptingServices</b> folder of your project.</p>
+
+<p>More information about how to manually create such a <b>Scripting Service</b>, as well as
+the general concepts behind, can be found at: 
+<a target='_blank' href='http://www.dirigible.io/samples/entity_service.html'>http://www.dirigible.io/samples/entity_service.html</a> and
+<a target='_blank' href='http://www.dirigible.io/help/entity_service.html'>http://www.dirigible.io/help/entity_service.html</a>
+</p>
+<p>More information about the <b>Scripting Services</b> in general, can be found at:
+<a target='_blank' href='http://www.dirigible.io/help/scripting_services.html'>http://www.dirigible.io/help/scripting_services.html</a>
+</p>
+<p><b>Injected API</b>, which can be used within the <b>Scripting Services</b> code and also available in the code-completion, can be found at:
+<a target='_blank' href='http://api.dirigible.io'>http://api.dirigible.io</a>
+</p>
+
+
+</p>
+
+
+
 </body>
 </html>
