--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/welcome.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/welcome.html
@@ -12,17 +12,25 @@
   </style>
 </head>
 <body>
-The Get Started Project will contain the main artefacts needed to run an end to end service.<br>
-It will include:<br>
+<h3>Welcome to Dirigible!</h3>
+<p>Congratulations!</p>
+<p>You have managed to reach one of the most advanced Cloud Development Toolkits on this planet!</p>
+<p>It seems you do not have any project in your Workspace, hence probably the best option is 
+to lean back and to follow this wizard. It will provide you with the necessary information about 
+the key must-to-know features. </p>
+<p>This wizard will create a 'Get Started' project, which will contain the main artifacts needed to run an end-to-end application service.</p>
+It includes:<br>
 <ul>
     <li>a database table to persist the data;</li>
-	<li>a RESTfull JavaScript server-side service;</li>
-	<li>and user interface in HTML5</li>
+	<li>a RESTfull JavaScript server-side service for CRUD operations;</li>
+	<li>and user interface in HTML5 for manipulating the data via a browser</li>
 </ul>
 <br>
-More advanced technics such as creation of Flows and Jobs, Wiki pages, Extensions and Tests
-can be found at 
+<p>More advanced techniques such as creation of mock data files, flows and jobs, wiki pages, extensions, tests 
+as well as the life-cycle management capabilities of discovery, import and export, cloning of instances, 
+monitoring and access management and more, can be found at: 
 <a target='_blank' href='http://help.dirigible.io'>http://help.dirigible.io</a> and 
 <a target='_blank' href='http://samples.dirigible.io'>http://samples.dirigible.io</a>
+</p>
 </body>
 </html>
