--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/summary.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/summary.html
@@ -12,6 +12,23 @@
   </style>
 </head>
 <body>
-Summary...
+<p>Great! You are at the finish of the process of creating of your first project with Dirigible!</p>
+<p>You learned how to start with the RAD techniques by utilizing the capabilities for
+modeling data structures and creating underlying database artifacts, writing RESTful services in JavaScript and generating pattern-based HTML5 user interfaces.</p>
+<p>There is only one more important concept that you have to get familiar with and you can go.
+It is Activation and Publishing processes. You can find more info about them at 
+<a target='_blank' href='http://www.dirigible.io/help/activation.html'>http://www.dirigible.io/help/activation.html</a> and
+<a target='_blank' href='http://www.dirigible.io/help/publishing.html'>http://www.dirigible.io/help/publishing.html</a>.
+In short to be able to see your changes immediately in the Preview window (Sandbox space) you have to either enable 
+"Auto-Activate" option under Project menu (enabled by default) or 
+click on Activate action every time you want the executed code to get updated. 
+</p>
+<p>More sample projects and snippets you can find at
+<a target='_blank' href='http://samples.dirigible.io'>http://samples.dirigible.io</a> or directly import them from GitHub (File->Import Sample).
+</p>
+<p>Specifically, the description about this application you can find at
+<a target='_blank' href='http://www.dirigible.io/samples/bookstore.html'>http://www.dirigible.io/samples/bookstore.html</a>
+</p>
+<h4>Enjoy programming like never before!</h4>
 </body>
 </html>
