--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
@@ -11,13 +11,13 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-4 col-md-offset-4">
 					<h1 class="text-center login-title">Anonymous Access</h1>
-					<p>Choose a name you like to be used for the instant trial access.
+					<p>Choose a name you like to be used for the instant trial access. It must be at least three characters long and must contain only latin letters and underscore character.
 						It will be kept in a cookie for later use for your convenience.
 					</p>
 					<div class="account-wall">
 						<img class="logo-img" src="images/dirigible_logo.svg" alt="">
 						<form class="form-tryout" name="tryoutForm" method="GET" action="../anonymous">
-						<input id="username" type="text" name="user" class="form-control" placeholder="Username" required autofocus>
+						<input id="username" type="text" name="user" class="form-control" placeholder="Username" required autofocus pattern="[A-Za-z_]{3,64}">
 						<input id="redirect" type="hidden" name="redirect" value="true">
 						<button class="btn btn-lg btn-primary btn-block" type="submit">Try out!</button>
 						<a href="///help.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
