--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -47,6 +47,23 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/plugins/jqplot.dateAxisRenderer.min.js"></script>
   <!-- end -->
   
+  <style type="text/css" media="screen">
+	  body {
+	      overflow: hidden;
+	  }
+
+	  #editor {
+	      margin: 0;
+	      position: absolute;
+	      top: 0;
+	      bottom: 0;
+	      left: 0;
+	      right: 0;
+	  }
+
+	</style>
+	<script src="lib/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/ace/ext-language_tools.js" type="text/javascript"></script>
 </head>
 
 <body>
