workspace ui with toggling of ws nav prototyped

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -54,13 +54,14 @@
 
 	  #editor {
 	      margin: 0;
-	      position: absolute;
+	      /* position: absolute; */
+	      height:400px;
 	      top: 0;
 	      bottom: 0;
 	      left: 0;
 	      right: 0;
 	  }
-
+	  
 	</style>
 	<script src="lib/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="lib/ace/ext-language_tools.js" type="text/javascript"></script>
