--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -49,10 +49,10 @@
   
   <link rel="stylesheet" type="text/css" href="orion/code_edit/built-codeEdit.css"/>
         <style>
-        body {
+        /* body {
             overflow: hidden;
             height: 100%
-        }
+        } */
         #embeddedEditor {
             margin: 0;
             position: absolute;
@@ -80,7 +80,7 @@
 				padding-bottom: 5px;
 				position: relative;
 			}
-			
+
 		</style>
 		<script src="orion/requirejs/require.min.js"></script>
 		
@@ -130,14 +130,14 @@
     <!-- Begin page content -->
     <div class="container" ng-view></div>
     <!-- End page content --> </div>
-  <div id="footer">
-    <div class="container">
-      <p class="text-muted credit">
-        Copyright &copy; 2010-2015 Eclipse Foundation, Licensed under the
-        <a href='https://www.eclipse.org/legal/epl-v10.html' target='_blank'>Eclipse Public License - v 1.0</a>
-      </p>
-    </div>
-  </div>
+	<div id="footer">
+	  <div class="container">
+	    <p class="text-muted credit">
+	      Copyright &copy; 2010-2015 Eclipse Foundation, Licensed under the
+	      <a href='https://www.eclipse.org/legal/epl-v10.html' target='_blank'>Eclipse Public License - v 1.0</a>
+	    </p>
+	  </div>
+	</div>	
   
 </body>
 </html>
