shuffling workspace resources more appropriately

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -38,7 +38,7 @@
   <!-- scripts/app.js -->
   <script src="scripts/app.js"></script>
   <script src="templates/default.js"></script>
-  <script src="templates/workspace.js"></script>
+  <script src="scripts/workspace.js"></script>
   <!-- end -->
   
   <!-- jqplot -->
