theme service added https://bugs.eclipse.org/bugs/show_bug.cgi?id=486910

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Instant Access</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="anonymous.css">
+	<link rel="stylesheet" href="styles/default/bootstrap.min.css">
+	<link rel="stylesheet" href="styles/anonymous.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 </head>
     <body>
