--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -39,6 +39,9 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/workspace.js"></script>
   <script src="templates/default.js"></script>
+  
+  <script src="scripts/bootstrap-notify.min.js"></script>
+  <link rel="stylesheet" href="scripts/animate.min.css">
   <!-- end -->
   
   <!-- jqplot -->
