duplicate orion for isolation ide/runtime - to be made smarter in the future

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -51,8 +51,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.8/plugins/jqplot.dateAxisRenderer.min.js"></script>
   <!-- end -->
 
-  <link rel="stylesheet" type="text/css" href="../orion/code_edit/built-codeEdit.css" />
-  <script src="../orion/requirejs/require.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="orion/code_edit/built-codeEdit.css" />
+  <script src="orion/requirejs/require.min.js"></script>
   
   <script>
   	
